Fixed terminal lines wrapping bug

--- a/src/components/applications/terminal/Terminal.module.css
+++ b/src/components/applications/terminal/Terminal.module.css
@@ -24,8 +24,9 @@
 	flex-direction: row;
 	align-items: center;
 	width: 100%;
-	height: 1.25rem;
+	line-height: 1.25rem;
 	font-size: 1rem;
+	text-align: start;
 }
 
 .Input input {
